# esp32-fiat-lux

./: .gitignore  CMakeLists.txt  README.md  partitions_singleapp_spiffs.csv  sdkconfig  sdkconfig.ci
main/: CMakeLists.txt  Kconfig.projbuild  Ledstrip.cpp  Ledstrip.h  RmtTxDriver.cpp  RmtTxDriver.h  file_server.c  file_server.h  idf_component.yml  led_strip_algorithms.c  led_strip_algorithms.h  led_strip_example_main.c  main.c  main.cpp  mount.c  sntp.c  sntp.h  webserver.c  webserver.cpp  webserver.h  wifi.c  wifi.h  wifi_softap.c  wifi_station.c  wifi_station.h
website/: fiatlux.js  index.css  index.html  settings.css  settings.html  settings.js  wifisettings.html  wifisettings.js
